--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -21,7 +21,7 @@
     <p class="form-control-static">
         <select class="form-control" name="filter_select">
           <option>Status =</option>
-          <option  selected="selected">App</option>
+          <option  selected="selected">Name</option>
           <option>Location</option>
         </select>
     </p>
@@ -50,7 +50,7 @@
     <tr class="active">
         <th><input type="checkbox"></th>
         <th width="10%">Status</th>
-        <th width="30%">App</thw>
+        <th width="30%">Name</thw>
         <th width="20%">Location</th>
         <th width="25%">Description</th>
         <th colspan="4" width="15%">Actions</th>
