--- a/templates/jenkins_server.html
+++ b/templates/jenkins_server.html
@@ -51,7 +51,7 @@
             <input type="checkbox">
         </th>
         <th width="10%">Status</th>
-        <th width="30%">App</thw>
+        <th width="30%">Name</thw>
         <th width="20%">Location</th>
         <th width="25%">Description</th>
         <th colspan="4" width="15%">Actions</th>
