--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -20,12 +20,12 @@
   <div class="form-group">
     <p class="form-control-static">
         <select class="form-control" name="filter_select">
-          <option>Status =</option>
-          <option  selected="selected">Name</option>
-          <option>Location</option>
+          <option {% if filter_select == "Status =" %} selected="selected" {% endif %}>Status =</option>
+          <option {% if filter_select == "Name" or filter_select == "" %} selected="selected" {% endif %}>Name</option>
+          <option {% if filter_select == "Location" %} selected="selected" {% endif %}>Location</option>
         </select>
     </p>
-    <input type="text" class="form-control" name="filter_keyword" placeholder="">
+    <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
   </div>
   <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
   <div class="btn-group">
