--- a/templates/account.html
+++ b/templates/account.html
@@ -48,7 +48,7 @@
         </td>
     </tr>
     <tr class="active">
-        <th><input type="checkbox"></th>
+        <th><input type="checkbox" name="check_all" id="check_all" onclick="checkAll()"></th>
         <th width="10%">User Name</th>
         <th width="30%">Email</thw>
         <th width="20%">Last Login</th>
@@ -56,9 +56,7 @@
         <th colspan="4" width="15%">Actions</th>
     </tr>
     <tr>
-        <td>
-            <input type="checkbox">
-        </td>
+        <td><input type="checkbox" name="check_item"></td>
         <td>{{ userinfo.username }}</td>
         <td>{{ userinfo.email }}</td>
         <td>{{ userinfo.last_login }}</td>
@@ -85,4 +83,16 @@
     </tr>
 </table>
 
+
+<script> 
+//复选框的全选、取消全选功能
+function checkAll() {
+var all=document.getElementById('check_all');//获取到点击全选的那个复选框的id
+var one=document.getElementsByName('check_item');//获取到复选框的名称
+//因为获得的是数组，所以要循环 为每一个checked赋值
+for(var i=0;i<one.length;i++){
+one[i].checked=all.checked; //直接赋值不就行了嘛
+}
+}
+</script>
 {% endblock %}
