--- a/templates/supervisor_server.html
+++ b/templates/supervisor_server.html
@@ -49,7 +49,7 @@
         </td>
     </tr>
     <tr class="active">
-        <th><input type="checkbox"></th>
+        <th><input type="checkbox" name="check_all" id="check_all" onclick="checkAll()"></th>
         <th width="10%">Status</th>
         <th width="30%">Name</thw>
         <th width="20%">Location</th>
@@ -58,9 +58,7 @@
     </tr>
     {% for process in process_list %}
     <tr>
-        <td>
-            <input type="checkbox">
-        </td>
+        <td><input type="checkbox" name="check_item"></td>
         <td style="text-transform:capitalize;">
             {{process.statename|lower}}
         </td>
@@ -92,6 +90,17 @@
         </td>
     </tr>
 </table>
+
+<script> 
+//复选框的全选、取消全选功能
+function checkAll() {
+var all=document.getElementById('check_all');//获取到点击全选的那个复选框的id
+var one=document.getElementsByName('check_item');//获取到复选框的名称
+//因为获得的是数组，所以要循环 为每一个checked赋值
+for(var i=0;i<one.length;i++){
+one[i].checked=all.checked; //直接赋值不就行了嘛
+}
+}
+</script>
+
 {% endblock %}
-</body>
-</html>
