--- a/templates/text_viewer.html
+++ b/templates/text_viewer.html
@@ -1,10 +1,60 @@
 {% extends "base.html" %}
 
-
 {% block body %}
+<ol class="breadcrumb">
+  <li>Ops Manage</li>
+  <li class="active">Text Viewer</li>
+</ol>
 
-{% for text_content in text_contents %}
-	{{ text_content }}<br/>      
-{% endfor %}
+<div class="page-header">
+    <h2>
+        Text Viewer
+    </h2>
+</div>
+
+<form class="form-inline" style="float: right;" action="/textviewer/" method="post">
+ {% csrf_token %}
+  <div class="form-group">
+    <p class="form-control-static">
+        <select class="form-control" name="filter_select">
+          <option>Content</option>
+        </select>
+    </p>
+    <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
+    <input type="hidden" class="form-control" name="dist" value="{{current_directory}}" placeholder="">
+  </div>
+  <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
+  <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+</form>
+
+<div class="col-md-12">	
+	<div>
+		<h4>{{current_directory}}</h4>
+	</div>  
+<div style="height:500px; word-wrap: break-word;word-break: break-all;overflow: auto;">
+<table class="table">
+	{% for text_content in text_contents%}
+	<tr>
+		<td>
+			{{text_content}}
+		</td>
+	</tr>
+	{% endfor %}
+</table>
+</div>
+</div>
+
+<div class="col-md-12">
+  </br>
+  <span style="text-align:center; display:block;">
+    <a>
+       <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ previous_page_number }}">Previous</a>
+    </a>
+    <a style="color:inherit;">&nbsp; < {{ current_page_number }} / {{ total_pages }} > &nbsp;</a>
+    <a>
+        <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ next_page_number }}">Next</a>
+    </a>
+  </span>
+</div>
 
 {% endblock %}
