--- a/templates/directory_viewer.html
+++ b/templates/directory_viewer.html
@@ -12,9 +12,19 @@
         Directory Viewer
     </h2>
 </div>
-<h4>
-    &nbsp;{{current_dir}}
-</h4>
+
+<div>
+    <table class="table" style="word-break:break-all; word-wrap:break-all;">
+      <tr class="active">
+        <th>
+          Path: {{current_dir}}
+        </th>
+        <tr>
+          <td></td>
+        </tr>
+      </tr>
+    </table>
+</div> 
 <table class="table table-hover">
     <tr>
         <td colspan="12" data-column="0">
