--- a/templates/text_viewer.html
+++ b/templates/text_viewer.html
@@ -29,7 +29,16 @@
 
 <div class="col-md-12">	
 	<div>
-		<h4>{{current_directory}}</h4>
+    <table class="table" style="word-break:break-all; word-wrap:break-all;">
+      <tr class="active">
+        <th>
+          Path: {{current_directory}}
+        </th>
+        <tr>
+          <td></td>
+        </tr>
+      </tr>
+    </table>
 	</div>  
 <div style="height:500px; word-wrap: break-word;word-break: break-all;overflow: auto;">
 <table class="table">
