--- a/templates/text_viewer.html
+++ b/templates/text_viewer.html
@@ -12,46 +12,26 @@
     </h2>
 </div>
 
-<form class="form-inline" style="float: right;" action="/textviewer/" method="post">
- {% csrf_token %}
-  <div class="form-group">
-    <p class="form-control-static">
-        <select class="form-control" name="filter_select">
-          <option>Content</option>
-        </select>
-    </p>
-    <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
-    <input type="hidden" class="form-control" name="dist" value="{{current_directory}}" placeholder="">
-  </div>
-  <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
-  <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-</form>
+<div class="col-md-12">
+  <form class="form-inline" style="float: right;" action="/textviewer/" method="post">
+   {% csrf_token %}
+    <div class="form-group">
+      <p class="form-control-static">
+          <select class="form-control" name="filter_select">
+            <option>Content</option>
+          </select>
+      </p>
+      <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
+      <input type="hidden" class="form-control" name="dist" value="{{current_directory}}" placeholder="">
+    </div>
+    <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
+  </form>
+</div>
 
-<div class="col-md-12">	
-	<div>
-    <table class="table" style="word-break:break-all; word-wrap:break-all;">
-      <tr class="active">
-        <th>
-          Path: {{current_directory}}
-        </th>
-        <tr>
-          <td></td>
-        </tr>
-      </tr>
-    </table>
-	</div>  
-<div style="height:500px; word-wrap: break-word;word-break: break-all;overflow: auto;">
-<table class="table">
-	{% for text_content in text_contents%}
-	<tr>
-		<td>
-			{{text_content}}
-		</td>
-	</tr>
-	{% endfor %}
-</table>
-</div>
-</div>
+<h5><code style="font-size: 13px;">Path: {{current_directory}}</code></h5>
+<pre style="background: white; height:500px;overflow: autos;">
+{% for text_content in text_contents%}{{text_content}}{% endfor %}
+</pre>
 
 <div class="col-md-12">
   </br>
