--- a/templates/directory_viewer.html
+++ b/templates/directory_viewer.html
@@ -29,6 +29,17 @@
           <input type="hidden" class="form-control" name="dist" value="{{current_directory}}" placeholder="">
         </div>
         <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
+        <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          More Actions <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-right">
+          <li><a href="#">Download</a></li>
+          <li><a href="#">Download</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Other</a></li>
+        </ul>
+      </div>
       </form>
     </caption>
     <tr>
@@ -37,6 +48,7 @@
         </td>
     </tr>
     <tr class="active">
+        <th><input type="checkbox" name="check_all" id="check_all" onclick="checkAll()"></th>
         <th width="40%">Name</th>
         <th width="20%">Size</thw>
         <th width="25%">Mtime</th>
@@ -45,6 +57,7 @@
     {% for dir_info in dir_infos %}
     {% if dir_info.isdir == 1  %}
     <tr>
+        <td><input type="checkbox" name="check_item"></td>
         <td>
         <span class="fa fa-folder-o">
             <a style="color:inherit;" href="?dist={{current_dir}}{{dir_info.file_name}}"</a>
@@ -73,6 +86,7 @@
     {% for dir_info in dir_infos %}
     {% if dir_info.isdir == 0  %}
     <tr>
+        <td><input type="checkbox" name="check_item"></td>
         <td>
         <span class="fa fa-file-text-o">
             <a a style="color:inherit;" href="/textviewer/?dist={{current_dir}}{{dir_info.file_name}}"</a>
