--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -93,6 +93,22 @@
 
 </table>
 
+<div>
+  <span style="text-align:center; display:block;">
+    <a>
+        {% if container_list.has_previous %}
+            <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ container_list.previous_page_number }}">Previous</a>
+        {% endif %}
+    </a>
+    <a style="color:inherit;">&nbsp; < {{ container_list.number }} / {{ container_list.paginator.num_pages }} > &nbsp;</a>
+    <a>
+        {% if container_list.has_next %}
+            <a style="text-decoration:underline; color:inherit;" href="{{ page_prefix }}{{ container_list.next_page_number }}">Next</a>
+        {% endif %}
+    </a>
+  </span>
+</div>
+
 <script> 
 //复选框的全选、取消全选功能
 function checkAll() {
