--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -4,12 +4,12 @@
 
 <ol class="breadcrumb">
   <li>Server Action</li>
-  <li class="active">Docker Server</li>
+  <li class="active">Docker Container</li>
 </ol>
 
 <div class="page-header">
     <h2>
-        Docker Server
+        Docker Container
     </h2>
 </div>
 
