--- a/templates/supervisor_server.html
+++ b/templates/supervisor_server.html
@@ -4,12 +4,12 @@
 
 <ol class="breadcrumb">
   <li>Server Action</li>
-  <li class="active">Supervisor Server</li>
+  <li class="active">Supervisor Process</li>
 </ol>
 
 <div class="page-header">
     <h2>
-        Supervisor Server
+        Supervisor Process
     </h2>
 </div>
 
