--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,12 +3,12 @@
 <ul class="nav nav-pills nav-stacked">
   <li>
     <a data-toggle="collapse" href="#collapse-server-action" aria-expanded="false" aria-controls="collapse-server-action" style="color: inherit;" >
-            Server Action
+            Service
         <span class="fa fa-chevron-right pull-right"></span>    
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-server-action">
-      <li ><a id="nav-dockerserver" style="text-align: right;" href="/dockerserver/">Docker Server</a></li>
-      <li ><a id="nav-supervisorserver" style="text-align: right;" href="/supervisorserver/">Supervisor Server</a></li>
+      <li ><a id="nav-dockerserver" style="text-align: right;" href="/dockerserver/">Docker Container</a></li>
+      <li ><a id="nav-supervisorserver" style="text-align: right;" href="/supervisorserver/">Supervisor Process</a></li>
     </ul>
 
   </li>
