优化代码结构

--- a/templates/action_log.html
+++ b/templates/action_log.html
@@ -15,7 +15,7 @@
 
 <table class="table">
 <caption>
-<form class="form-inline" style="float: right;" action="/actionlog/" method="post">
+<form class="form-inline" style="float: right;" action="/action_log/action_log_list" method="post">
  {% csrf_token %}
   <div class="form-group">
     <p class="form-control-static">
