--- a/templates/password_change.html
+++ b/templates/password_change.html
@@ -14,7 +14,7 @@
 <div class="static_page">
   <h3  class="modal-header">Change password</h3>
   <div class="modal-body">
-    <form class="form-horizontal" role="form" action='/changepassword/' method="post">
+    <form class="form-horizontal" role="form" action='/account/password_change' method="post">
       {% csrf_token %}
         <div class="row">
           <div class="col-sm-6 col-md-5">
