--- a/templates/side_bar.html
+++ b/templates/side_bar.html
@@ -7,8 +7,8 @@
         <span class="fa fa-chevron-right pull-right"></span>    
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-server-action">
-      <li ><a id="nav-dockerserver" style="text-align: right;" href="/dockerserver/">Docker Container</a></li>
-      <li ><a id="nav-supervisorserver" style="text-align: right;" href="/supervisorserver/">Supervisor Process</a></li>
+      <li ><a id="nav-container_list" style="text-align: right;" href="/docker/container_list">Docker Container</a></li>
+      <li ><a id="nav-process_list" style="text-align: right;" href="/supervisor/process_list">Supervisor Process</a></li>
     </ul>
 
   </li>
@@ -30,7 +30,7 @@
         <span class="fa fa-chevron-right pull-right"></span>
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-setting">
-      <li ><a id="nav-account" style="text-align: right;" href="/account/">Account</a></li>
+      <li ><a id="nav-my_account" style="text-align: right;" href="/account/my_account">Account</a></li>
       <li ><a id="nav-system" style="text-align: right;" href="/system/">User Setting</a></li>
     </ul>
   </li>
@@ -41,9 +41,9 @@
         <span class="fa fa-chevron-right pull-right"></span>
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-admin">
-      <li ><a id="nav-users" style="text-align: right;" href="/users/">Users</a></li>
-      <li ><a id="nav-serverlist" style="text-align: right;" href="/serverlist/">Server List</a></li>
-      <li ><a id="nav-actionlog" style="text-align: right;" href="/actionlog/">Action Log</a></li>
+      <li ><a id="nav-user_list" style="text-align: right;" href="/account/user_list">User List</a></li>
+      <li ><a id="nav-server_list" style="text-align: right;" href="/server/server_list">Server List</a></li>
+      <li ><a id="nav-action_log_list" style="text-align: right;" href="/action_log/action_log_list">Action Log</a></li>
     </ul>
   </li>
   {% endif %}
