--- a/templates/user_create.html
+++ b/templates/user_create.html
@@ -14,7 +14,7 @@
 <div class="static_page">
   <h3  class="modal-header">Create User</h3>
   <div class="modal-body">
-    <form class="form-horizontal" role="form" action='/createuser/' method="post">
+    <form class="form-horizontal" role="form" action='/account/user_create' method="post">
       {% csrf_token %}
         <div class="row">
           <div class="col-sm-6 col-md-5">
