--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -16,7 +16,7 @@
 
 <table class="table table-hover">
 <caption>
-<form class="form-inline" style="float: right;" action="/supervisorserver/" method="post">
+<form class="form-inline" style="float: right;" action="/account/my_account" method="post">
  {% csrf_token %}
   <div class="form-group">
     <p class="form-control-static">
@@ -70,7 +70,7 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="/changepassword/?username={{userinfo.username}}">Change Password</a></li>
+              <li><a href="/account/password_change?username={{userinfo.username}}">Change Password</a></li>
             </ul>
           </div>
         </td>
