--- a/templates/process_list.html
+++ b/templates/process_list.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li>Server Action</li>
+  <li>Service</li>
   <li class="active">Supervisor Process</li>
 </ol>
 
@@ -15,7 +15,7 @@
 
 <table class="table table-hover">
 <caption>
-<form class="form-inline" style="float: right;" action="/supervisorserver/" method="post">
+<form class="form-inline" style="float: right;" action="/supervisor/process_list" method="post">
  {% csrf_token %}
   <div class="form-group">
     <p class="form-control-static">
@@ -77,7 +77,7 @@
               <li><a href="javascript:;" onclick="process_opt('{{process.host_ip}}','{{process.host_port}}','{{process.name}}','start')">Start Process</a></li>
               <li><a href="javascript:;" onclick="process_opt('{{process.host_ip}}','{{process.host_port}}','{{process.name}}','stop')">Stop Process</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="/tail_process_log/?server_ip={{process.host_ip}}&server_port={{process.host_port}}&process_name={{process.name}}" target="_blank">Tail Log</a></li>
+              <li><a href="process_log?server_ip={{process.host_ip}}&server_port={{process.host_port}}&process_name={{process.name}}" target="_blank">Tail Log</a></li>
             </ul>
           </div>
         </td>
