--- a/templates/server_create.html
+++ b/templates/server_create.html
@@ -4,43 +4,45 @@
 
 <ol class="breadcrumb">
   <li>Admin</li>
-  <li class="active">Add Server</li>
+  <li class="active">Server Create</li>
 </ol>
 
 <div class="page-header">
-  <h2>Edit Server</h2>
+  <h2>Server Create</h2>
 </div>
 
 <div class="static_page">
-  <h3  class="modal-header">Edit Server</h3>
+  <h3  class="modal-header">Server Create</h3>
   <div class="modal-body">
-    <form class="form-horizontal" role="form" action='/editserver/' method="post">
+    <form class="form-horizontal" role="form" action='/server/server_create' method="post">
       {% csrf_token %}
         <div class="row">
           <div class="col-sm-6 col-md-5">
               <p><strong>Host Name </strong><span class="fa fa-asterisk"></span></p>
-              <input type="text" name="hostname" class="form-control" value={{server.hostname}} laceholder="" required autofocus>
+              <input type="text" name="hostname" class="form-control" placeholder="" required autofocus>
               </br>
               <p><strong>Server Type </strong><span class="fa fa-asterisk"></span></p>
-              <select class="form-control" name="server_type" readonly="readonly">
-                <option>{{server_type}}</option>
+              <select class="form-control" name="server_type">
+                <option>Docker</option>
+                <option>Supervisor</option>
+                <option>Jenkins</option>
               </select>
               </br>
               <p><strong>Ip Addr </strong> </strong><span class="fa fa-asterisk"></span></p>
-              <input type="text" name="ip" class="form-control" value={{server.ip}} readonly="readonly" placeholder="" required autofocus>
+              <input type="text" name="ip" class="form-control" placeholder="" required autofocus>
               </br>
               <p><strong>Port </strong> </strong><span class="fa fa-asterisk"></span></p>
-              <input type="text" name="port" class="form-control" value={{server.port}}  placeholder="" required autofocus>
+              <input type="text" name="port" class="form-control" value ="22" placeholder="" required autofocus>
               </br>
               <p><strong>User Name </strong></p>
-              <input type="text" name="username" class="form-control" value={{server.username}} placeholder="" autofocus>
+              <input type="text" name="username" class="form-control" placeholder="" autofocus>
               </br>
               <p><strong>Password </strong></span></p>
               <input type="password" name="password" class="form-control" placeholder="">
               </br>
               </br>
               <p><strong>Description </strong></p>
-              <input type="text" name="description" class="form-control" value="{{server.description}}" placeholder="">
+              <input type="text" name="description" class="form-control" placeholder="">
               </br>
               {% if message %}
                   <div class="alert alert-warning">{{ message }}</div>
@@ -49,7 +51,7 @@
           </div>
           <div class="col-sm-6">
             <h3>Description:</h3>
-            <p>Edit a server and modify related properties</p>
+            <p>Create new server and set related properties</p>
           </div>
         </div>
       <div class="modal-footer"><button class="btn btn-primary" type="submit">Submit</button></div>
