--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 <hr>
 <footer> 
 <p style="text-align: center; font-size: 13px;">
-Copyright © 2018 mmanager
+© 2018 mmanager
 </p> 
 </footer> 
 </div>
